MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/EOI_Site_Visitor__c.object-meta.xml
<CustomObject>
    <description>One record per verified person on the EOI microsites (Wadeem, ADIB). Created or reused the moment a customer proves an email, mobile or UAE PASS identity. Registrations link to it, milestone Tasks hang on it, counts show returning visitors.</description>
    <label>EOI Site Visitor</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Visitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI Site Visitors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>