MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Email_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Verified At</label>
    <type>DateTime</type>
</CustomField>