MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/First_Seen__c.field-meta.xml
<CustomField>
    <fullName>First_Seen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Seen</label>
    <type>DateTime</type>
</CustomField>