MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Identity_Key__c.field-meta.xml
<CustomField>
    <fullName>Identity_Key__c</fullName>
    <description>SHA-256 of the first verified identifier (type and value). The key the site looks up on.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Identity Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>