MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Identity_Type__c.field-meta.xml
<CustomField>
    <fullName>Identity_Type__c</fullName>
    <label>Identity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>UAE Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>