MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Journey_Trail__c.field-meta.xml
<CustomField>
    <fullName>Journey_Trail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey Trail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>