MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Last_Registration__c.field-meta.xml
<CustomField>
    <fullName>Last_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Registration</label>
    <referenceTo>EOI_Public_Registration__c</referenceTo>
    <relationshipLabel>Last Visitor Of</relationshipLabel>
    <relationshipName>Last_Visitor_Of</relationshipName>
    <type>Lookup</type>
</CustomField>