MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Seen</label>
    <type>DateTime</type>
</CustomField>