MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EOI Site Visitors</relationshipLabel>
    <relationshipName>Site_Visitors</relationshipName>
    <type>Lookup</type>
</CustomField>