MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Matched_Lead__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>EOI Site Visitors</relationshipLabel>
    <relationshipName>Site_Visitors</relationshipName>
    <type>Lookup</type>
</CustomField>