MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Mobile_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Verified_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Verified At</label>
    <type>DateTime</type>
</CustomField>