MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/UAE_Pass_UUID__c.field-meta.xml
<CustomField>
    <fullName>UAE_Pass_UUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UAE Pass UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>