MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Verified_Count__c.field-meta.xml
<CustomField>
    <fullName>Verified_Count__c</fullName>
    <label>Verified Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>