MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Verified_Email__c.field-meta.xml
<CustomField>
    <fullName>Verified_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Verified Email</label>
    <type>Email</type>
</CustomField>