MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Verified_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Verified_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Verified Mobile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>