MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/fields/Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Visit_Count__c</fullName>
    <label>Visit Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>