MODON MRE BPDEV/force-app/main/default/objects/EOI_Site_Visitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Identity_Type__c</columns>
    <columns>Verified_Email__c</columns>
    <columns>Verified_Mobile__c</columns>
    <columns>Verified_Count__c</columns>
    <columns>Last_Seen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>